# platformer-2d

./: Cargo.toml
assets/tileset/: map.ldtk
src/: animation.rs  background.rs  collision.rs  f32_utils.rs  fps.rs  kinematics.rs  knight.rs  main.rs  map.rs  physics.rs  player.rs  texture_utils.rs
src/collision/: groups.rs  plugin.rs
src/knight/: animation.rs  components.rs  plugin.rs  sensor.rs  state.rs  systems.rs
src/player/: animation.rs  components.rs  plugin.rs  sensor.rs  state.rs  systems.rs
