[package]
name = "platformer-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.18.3"
bevy_ecs_ldtk = "0.7.0"
bevy_rapier2d = { version = "0.21.0", features = ["simd-nightly", "debug-render-2d"] }
strum = { version = "0.24.1", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
